# todo

./: .flake8  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/001-todo-console-app/: 2-create-todo-console-app-spec.spec.prompt.md  3-plan-todo-console-app.plan.prompt.md  4-tasks-todo-console-app.tasks.prompt.md
history/prompts/002-fix-delete-prompt/: 001-create-plan.plan.prompt.md  001-create-spec.spec.prompt.md  001-create-tasks.tasks.prompt.md
history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md
history/prompts/general/: 001-todo-implementation.general.prompt.md
specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-console-app/checklists/: requirements.md
specs/001-todo-console-app/contracts/: todo-api-contract.md
specs/002-fix-delete-prompt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-delete-prompt/checklists/: requirements.md
specs/002-fix-delete-prompt/contracts/: todo-delete-contract.md
tests/: conftest.py
tests/integration/: test_comprehensive.py  test_end_to_end.py
tests/unit/: test_service.py
todo_app/: cli.py  main.py  models.py  repository.py  service.py
